--- a/Unique.Id.To.Be.Replaced.Main/Unique.Id.To.Be.Replaced.Main.csproj
+++ b/Unique.Id.To.Be.Replaced.Main/Unique.Id.To.Be.Replaced.Main.csproj
@@ -58,8 +58,8 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\SimpleSerialLoggerGui.Core\SimpleSerialLoggerGui.Core.csproj" />
-      <ProjectReference Include="..\SimpleSerialLoggerGui.UI\SimpleSerialLoggerGui.UI.csproj" />
+      <ProjectReference Include="..\Unique.Id.To.Be.Replaced.Core\Unique.Id.To.Be.Replaced.Core.csproj" />
+      <ProjectReference Include="..\Unique.Id.To.Be.Replaced.UI\Unique.Id.To.Be.Replaced.UI.csproj" />
     </ItemGroup>
 
     <ItemGroup>
