--- a/Unique.Id.To.Be.Replaced.UI/Unique.Id.To.Be.Replaced.UI.csproj
+++ b/Unique.Id.To.Be.Replaced.UI/Unique.Id.To.Be.Replaced.UI.csproj
@@ -25,7 +25,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\SimpleSerialLoggerGui.Core\SimpleSerialLoggerGui.Core.csproj" />
+      <ProjectReference Include="..\Unique.Id.To.Be.Replaced.Core\Unique.Id.To.Be.Replaced.Core.csproj" />
     </ItemGroup>
 
     <ItemGroup>
