--- a/Unique.Id.To.Be.Replaced.Core/Unique.Id.To.Be.Replaced.Core.csproj
+++ b/Unique.Id.To.Be.Replaced.Core/Unique.Id.To.Be.Replaced.Core.csproj
@@ -13,17 +13,17 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Autofac" Version="7.0.0" />
-      <PackageReference Include="CommunityToolkit.Mvvm" Version="8.1.0" />
-      <PackageReference Include="GuerrillaNtp" Version="3.0.0" />
-      <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
+      <PackageReference Include="Autofac" Version="7.0.1" />
+      <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.0" />
+      <PackageReference Include="GuerrillaNtp" Version="3.1.0" />
+      <PackageReference Include="JetBrains.Annotations" Version="2022.3.1" />
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
       <PackageReference Include="Serilog" Version="2.12.0" />
       <PackageReference Include="Serilog.Sinks.Console" Version="4.1.0" />
       <PackageReference Include="Serilog.Sinks.Debug" Version="2.0.0" />
       <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
       <PackageReference Include="System.Drawing.Common" Version="7.0.0" />
-      <PackageReference Include="System.Management" Version="7.0.0" />
-      <PackageReference Include="Temporalio" Version="0.1.0-alpha4" />
+      <PackageReference Include="System.Management" Version="7.0.1" />
     </ItemGroup>
 
     <ItemGroup>
